[gd_scene load_steps=3 format=2]

[ext_resource path="res://_cli/ressources/themes/game_gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://_cli/scenes/cli_example_menu.gd" type="Script" id=2]

[node name="Menu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
size_flags_horizontal = 7
size_flags_vertical = 7
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 793.0
margin_top = 365.0
margin_right = 1127.0
margin_bottom = 714.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSolo" type="Button" parent="VBox"]
margin_right = 334.0
margin_bottom = 35.0
text = "Play Solo"

[node name="MarginContainer" type="MarginContainer" parent="VBox"]
margin_top = 39.0
margin_right = 334.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCreateGame" type="Button" parent="VBox"]
margin_top = 63.0
margin_right = 334.0
margin_bottom = 98.0
text = "Create Multiplayer Game"

[node name="MarginContainer2" type="MarginContainer" parent="VBox"]
margin_top = 102.0
margin_right = 334.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoinGame" type="Button" parent="VBox"]
margin_top = 126.0
margin_right = 334.0
margin_bottom = 161.0
text = "Join Multiplayer Game"

[node name="VBoxJoinGameOption" type="VBoxContainer" parent="VBox"]
margin_top = 165.0
margin_right = 334.0
margin_bottom = 243.0

[node name="HBox" type="HBoxContainer" parent="VBox/VBoxJoinGameOption"]
margin_right = 334.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox/VBoxJoinGameOption/HBox"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 34.0
text = "IP :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ip" type="LineEdit" parent="VBox/VBoxJoinGameOption/HBox"]
margin_left = 60.0
margin_right = 334.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="HBox2" type="HBoxContainer" parent="VBox/VBoxJoinGameOption"]
margin_top = 43.0
margin_right = 334.0
margin_bottom = 78.0

[node name="MarginContainer" type="MarginContainer" parent="VBox/VBoxJoinGameOption/HBox2"]
margin_right = 262.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonJoin" type="Button" parent="VBox/VBoxJoinGameOption/HBox2"]
margin_left = 266.0
margin_right = 334.0
margin_bottom = 35.0
disabled = true
text = "Join"

[node name="MarginContainer3" type="MarginContainer" parent="VBox"]
margin_top = 247.0
margin_right = 334.0
margin_bottom = 267.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAdvanced" type="Button" parent="VBox"]
margin_top = 271.0
margin_right = 334.0
margin_bottom = 306.0
text = "Advanced options..."

[node name="VBoxAdvanced" type="VBoxContainer" parent="VBox"]
margin_top = 310.0
margin_right = 334.0
margin_bottom = 349.0

[node name="HBox" type="HBoxContainer" parent="VBox/VBoxAdvanced"]
margin_right = 334.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox/VBoxAdvanced/HBox"]
margin_top = 5.0
margin_right = 84.0
margin_bottom = 34.0
text = "Port :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="LineEdit" parent="VBox/VBoxAdvanced/HBox"]
margin_left = 88.0
margin_right = 334.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "12121"
caret_blink = true
caret_blink_speed = 0.5

[connection signal="pressed" from="VBox/ButtonSolo" to="." method="_on_ButtonSolo_pressed"]
[connection signal="pressed" from="VBox/ButtonCreateGame" to="." method="_on_ButtonCreateGame_pressed"]
[connection signal="pressed" from="VBox/ButtonJoinGame" to="." method="_on_ButtonJoinGame_pressed"]
[connection signal="text_changed" from="VBox/VBoxJoinGameOption/HBox/Ip" to="." method="_on_Ip_text_changed"]
[connection signal="pressed" from="VBox/VBoxJoinGameOption/HBox2/ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="pressed" from="VBox/ButtonAdvanced" to="." method="_on_ButtonAdvanced_pressed"]
[connection signal="text_changed" from="VBox/VBoxAdvanced/HBox/Port" to="." method="_on_Port_text_changed"]
